# target-starrocks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  docker-compose.yml  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml  test.yml
fixtures/: init.sql
target_starrocks/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  conftest.py  test_core.py
