[tool.poetry]
name = "target-starrocks"
version = "0.0.0"
description = "Singer target for StarRocks, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
keywords = [
    "ELT",
    "StarRocks",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9"
singer-sdk = { version="~=0.44.0", extras = ["faker"] }
starrocks = "~=1.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.44.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]
xfail_strict = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
target-starrocks = 'target_starrocks.target:TargetStarRocks.cli'
